# homework_poetry

./: pyproject.toml
project3/: cli.py
