[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["PetrDidur <pdidur@yandex.ru>"]
readme = "README.md"

[tool.poetry.scripts]
say-welcome = "cli:welcome"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2023.3"
django = "4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
